--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -41,3 +41,15 @@
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
+<style>
+  body {
+   margin: auto;
+   margin-top: 4%;
+   width: 50%;
+   <!--
+   border: 3px solid blue;
+   -->
+   padding: 10px;
+  }
+
+<style>
